--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,17 @@ name: CI
 # We can specify which GitHub events will trigger a CI build
 on: push
 
-# now define a single jon 'build'
+# now define a single job 'build'
 jobs:
   build:
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.8, 3.9]
+
   # we can also specify the OS to run tests on
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
 
     # a job is a sequence of steps
     steps:
@@ -17,7 +23,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: ${{matrix.python-verson}}
     - name: Intsall Python dependencies
       run: |
           python3 -m pip install --upgrade pip
