--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         python-version: [3.8, 3.9]
 
   # we can also specify the OS to run tests on
@@ -32,3 +32,6 @@ jobs:
     - name: Test with Pytest
       run: |
           pytest tests/test_models.py
+    - name: Chek Style with Pylint
+      run: |
+        python3 -m pylint --fail-under=0 --reports=y inflammation
